--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="uk-navbar-container" uk-navbar>
   <div class="uk-navbar-center">
   <ul class="uk-navbar-nav">
-    <li><a href="">Home</a></li>
-    <li><a href="">Contact</a></li>
+    <li><a routerLink="home">Home</a></li>
+    <li><a routerLink="contact">Contact</a></li>
   </ul>
   </div>
 </nav>
