--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <header></header>
 
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+<app-user-info></app-user-info>
