--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -6,6 +6,32 @@
 <p *ngIf="showP">{{name2}}</p>
 
 <hr>
+
+  <form (ngSubmit)="onSubmit(f)" #f="ngForm" class="uk-width-1-3" >
+
+    <div class="uk-margin">
+      <label for="firstName">Imię</label>
+      <input class="uk-input" ngModel name="firstName" id="firstName" type="text" required #firstName="ngModel">
+      <span style="color: red" *ngIf="!firstName.valid && firstName.touched">Uzupełnij imię</span>
+    </div>
+    <div class="uk-margin">
+      <label for="lastName">Nazwisko</label>
+      <input class="uk-input" ngModel name="lastName" id="lastName" type="text" required>
+    </div>
+    <div class="uk-margin">
+      <label for="age">Wiek</label>
+      <input class="uk-input" ngModel name="age" id="age" type="text" required>
+    </div>
+    <div class="uk-margin">
+      <label for="city">Miasto</label>
+      <input class="uk-input" ngModel name="city" id="city" type="text" required>
+    </div>
+
+    <input [disabled]="!f.valid" type="submit" class="uk-button uk-button-primary" value="Zapisz">
+
+  </form>
+
+<hr>
 <br>
 <br>
 
